# koggie

./: .gitignore  Cargo.toml  README.md  SDD.md  debug.sh  install.sh
.koggie/frag/: foot.html  head.html  html.html  menu.html
config/: README.md
config/names/: ip.txt
config/pages/: artists.md  home.md  shows.md
config/style/: head.html
config/template/: head.html
koggie/: Cargo.toml
koggie-client/: Cargo.toml
koggie-client/src/: main.rs
koggie-server/: Cargo.toml
koggie/koggie-server/src/: main.rs
koggie/opus-rs/: Cargo.toml
koggie/res/: html.rs
koggie/src/: main.rs
koggie_warp/: Cargo.toml  build.sh
koggie_warp/res/: foot.rs  head.rs  menu.rs
koggie_warp/src/: main.rs  md2html.rs
old/: Cargo.toml  install.sh  update.sh
old/config/names/: title.txt
old/config/other/: README.md
old/config/pages/: about.md
old/config/style/: body.html
old/koggie/: koggie.html
old/opus-rs/src/: lib.rs
old/src/: watcher.rs
old/src/template/: foot.html  menu.html
opus-rs/src/: lib.rs
site/: 404.md  about.md  calendar.md  home.md
src/: main.rs  stream.rs  watcher.rs
static/: 404.html  calendar.html  index.html
