[package]
name = "koggie"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeronaldaron@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-files = "0.1.3"
listenfd = "0.3"
opus = { path = "opus-rs" }
cala = "0.1"
futures = "0.1"
inotify = "0.7"
pulldown-cmark = { version = "0.5", default-features = false, features = ["simd"] }
